// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders correctly 1`] = `
<DocumentFragment>
  .cache-2p9kfb {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-13dvzl1 {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.cache-13dvzl1:hover svg {
  border-radius: 4px;
  background-color: #f6f5f7;
  fill: #4f0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-13dvzl1:focus+svg {
  outline: 1px #b2b6c3 dotted;
}

.cache-hh5w31 {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.cache-hh5w31.cache-hh5w31 {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1ghrkqx {
  font-size: '12px';
  color: #ef5774;
  padding-left: 4px;
  padding-right: 4px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <label
      aria-disabled="false"
      class="eu28k4m5 e1g1zfwd0 cache-2p9kfb e7ah3bn0"
    >
      <input
        aria-checked="false"
        class="cache-13dvzl1 eu28k4m4"
        name="checkbox"
        type="checkbox"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-hh5w31 e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
      <div
        class="cache-0 eu28k4m2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1ghrkqx eu28k4m0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly checked 1`] = `
<DocumentFragment>
  .cache-2p9kfb {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-13dvzl1 {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.cache-13dvzl1:hover svg {
  border-radius: 4px;
  background-color: #f6f5f7;
  fill: #4f0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-13dvzl1:focus+svg {
  outline: 1px #b2b6c3 dotted;
}

.cache-n0qasr {
  fill: #4f0599;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.cache-n0qasr.cache-n0qasr {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1ghrkqx {
  font-size: '12px';
  color: #ef5774;
  padding-left: 4px;
  padding-right: 4px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <label
      aria-disabled="false"
      class="eu28k4m5 e1g1zfwd0 cache-2p9kfb e7ah3bn0"
    >
      <input
        aria-checked="true"
        checked=""
        class="cache-13dvzl1 eu28k4m4"
        name="checkbox"
        type="checkbox"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-n0qasr e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,19H5V5H15V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V11H19M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
        />
      </svg>
      <div
        class="cache-0 eu28k4m2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1ghrkqx eu28k4m0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly checked and disabled 1`] = `
<DocumentFragment>
  .cache-16fuhfx {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
}

.cache-10zl361 {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.cache-10zl361:hover svg {
  border-radius: 4px;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-10zl361:focus+svg {
  outline: 1px #b2b6c3 dotted;
}

.cache-q6aaf6 {
  fill: #f6f5f7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.cache-q6aaf6.cache-q6aaf6 {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1ghrkqx {
  font-size: '12px';
  color: #ef5774;
  padding-left: 4px;
  padding-right: 4px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <label
      aria-disabled="true"
      class="eu28k4m5 e1g1zfwd0 cache-16fuhfx e7ah3bn0"
    >
      <input
        aria-checked="true"
        aria-disabled="true"
        checked=""
        class="cache-10zl361 eu28k4m4"
        disabled=""
        name="checkbox"
        style="pointer-events: none;"
        type="checkbox"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-q6aaf6 e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,19H5V5H15V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V11H19M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
        />
      </svg>
      <div
        class="cache-0 eu28k4m2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1ghrkqx eu28k4m0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly disabled 1`] = `
<DocumentFragment>
  .cache-16fuhfx {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
}

.cache-10zl361 {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.cache-10zl361:hover svg {
  border-radius: 4px;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-10zl361:focus+svg {
  outline: 1px #b2b6c3 dotted;
}

.cache-q6aaf6 {
  fill: #f6f5f7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.cache-q6aaf6.cache-q6aaf6 {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1ghrkqx {
  font-size: '12px';
  color: #ef5774;
  padding-left: 4px;
  padding-right: 4px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <label
      aria-disabled="true"
      class="eu28k4m5 e1g1zfwd0 cache-16fuhfx e7ah3bn0"
    >
      <input
        aria-checked="false"
        aria-disabled="true"
        class="cache-10zl361 eu28k4m4"
        disabled=""
        name="checkbox"
        style="pointer-events: none;"
        type="checkbox"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-q6aaf6 e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
      <div
        class="cache-0 eu28k4m2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1ghrkqx eu28k4m0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly no child 1`] = `
<DocumentFragment>
  .cache-2p9kfb {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-fp1n1c {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 0;
  padding: 2px;
  pointer-events: auto;
}

.cache-fp1n1c:hover svg {
  border-radius: 4px;
  background-color: #f6f5f7;
  fill: #4f0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-fp1n1c:focus+svg {
  outline: 1px #b2b6c3 dotted;
}

.cache-ixwshh {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.cache-ixwshh.cache-ixwshh {
  vertical-align: middle;
  margin-right: 0;
  padding: 2px;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1ghrkqx {
  font-size: '12px';
  color: #ef5774;
  padding-left: 4px;
  padding-right: 4px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <label
      aria-disabled="false"
      class="eu28k4m5 e1g1zfwd0 cache-2p9kfb e7ah3bn0"
    >
      <input
        aria-checked="false"
        class="cache-fp1n1c eu28k4m4"
        name="checkbox"
        type="checkbox"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-ixwshh e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
    </label>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1ghrkqx eu28k4m0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with a value 1`] = `
<DocumentFragment>
  .cache-2p9kfb {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-13dvzl1 {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.cache-13dvzl1:hover svg {
  border-radius: 4px;
  background-color: #f6f5f7;
  fill: #4f0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-13dvzl1:focus+svg {
  outline: 1px #b2b6c3 dotted;
}

.cache-hh5w31 {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.cache-hh5w31.cache-hh5w31 {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1ghrkqx {
  font-size: '12px';
  color: #ef5774;
  padding-left: 4px;
  padding-right: 4px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <label
      aria-disabled="false"
      class="eu28k4m5 e1g1zfwd0 cache-2p9kfb e7ah3bn0"
    >
      <input
        aria-checked="false"
        class="cache-13dvzl1 eu28k4m4"
        name="checkbox"
        type="checkbox"
        value="test"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-hh5w31 e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
      <div
        class="cache-0 eu28k4m2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1ghrkqx eu28k4m0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with an error 1`] = `
<DocumentFragment>
  .cache-2p9kfb {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-13dvzl1 {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.cache-13dvzl1:hover svg {
  border-radius: 4px;
  background-color: #f6f5f7;
  fill: #4f0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-13dvzl1:focus+svg {
  outline: 1px #b2b6c3 dotted;
}

.cache-1316guu {
  fill: #ef5774;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.cache-1316guu.cache-1316guu {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.cache-f39kmy {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  -webkit-transition: max-height 300ms ease-in,opacity 300ms ease-in;
  transition: max-height 300ms ease-in,opacity 300ms ease-in;
  max-height: 56px;
  opacity: 1;
  overflow: visible;
}

.cache-f39kmy.cache-f39kmy {
  overflow: hidden;
}

.cache-1ghrkqx {
  font-size: '12px';
  color: #ef5774;
  padding-left: 4px;
  padding-right: 4px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <label
      aria-disabled="false"
      class="eu28k4m5 e1g1zfwd0 cache-2p9kfb e7ah3bn0"
    >
      <input
        aria-checked="false"
        class="cache-13dvzl1 eu28k4m4"
        name="checkbox"
        type="checkbox"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-1316guu e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
      <div
        class="cache-0 eu28k4m2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="e14o3tsk0 cache-f39kmy e7ah3bn0"
    >
      <div
        class="cache-1ghrkqx eu28k4m0"
      >
        test error
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with indeterminate state 1`] = `
<DocumentFragment>
  .cache-2p9kfb {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-13dvzl1 {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.cache-13dvzl1:hover svg {
  border-radius: 4px;
  background-color: #f6f5f7;
  fill: #4f0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-13dvzl1:focus+svg {
  outline: 1px #b2b6c3 dotted;
}

.cache-n0qasr {
  fill: #4f0599;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.cache-n0qasr.cache-n0qasr {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1ghrkqx {
  font-size: '12px';
  color: #ef5774;
  padding-left: 4px;
  padding-right: 4px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <label
      aria-disabled="false"
      class="eu28k4m5 e1g1zfwd0 cache-2p9kfb e7ah3bn0"
    >
      <input
        aria-checked="mixed"
        class="cache-13dvzl1 eu28k4m4"
        name="checkbox"
        type="checkbox"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-n0qasr e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,19H5V5H15V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V11H19M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
        />
      </svg>
      <div
        class="cache-0 eu28k4m2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1ghrkqx eu28k4m0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with progress 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-2p9kfb {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-13dvzl1 {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.cache-13dvzl1:hover svg {
  border-radius: 4px;
  background-color: #f6f5f7;
  fill: #4f0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-13dvzl1:focus+svg {
  outline: 1px #b2b6c3 dotted;
}

.cache-1wr6k2n.cache-1wr6k2n {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
}

.cache-8ng7tj {
  height: 24px;
  width: 24px;
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-546l7a {
  visibility: hidden;
  position: absolute;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-5yrm0v.cache-5yrm0v {
  font-size: 12px;
  color: #ef5774;
  padding-right: 4px;
  padding-left: 4px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <label
      aria-disabled="false"
      class="eu28k4m3 e1g1zfwd0 cache-2p9kfb e7ah3bn0"
    >
      <input
        aria-checked="false"
        class="cache-13dvzl1 eu28k4m2"
        name="checkbox"
        type="checkbox"
      />
      <div
        class="cache-1wr6k2n e7ah3bn0"
      >
        <div
          aria-hidden="true"
        >
          <svg
            class="CircularProgressbar  cache-8ng7tj e7dhm9i1"
            data-test-id="CircularProgressbar"
            viewBox="0 0 100 100"
          >
            <path
              class="CircularProgressbar-trail"
              d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
              fill-opacity="0"
              stroke-width="16"
              style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
            />
            <path
              class="CircularProgressbar-path"
              d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
              fill-opacity="0"
              stroke-width="16"
              style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
            />
          </svg>
        </div>
        <div
          class="cache-546l7a e7dhm9i0"
        >
          <label
            for="input-6c756c756c756c756c756c756c756c75"
          >
            Loading
          </label>
          <progress
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="20"
            aria-valuetext="20%"
            id="input-6c756c756c756c756c756c756c756c75"
            max="100"
            value="20"
          >
            20%
          </progress>
        </div>
      </div>
      <div
        class="cache-0 eu28k4m0"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-5yrm0v e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with progress and no child 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-2p9kfb {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-fp1n1c {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 0;
  padding: 2px;
  pointer-events: auto;
}

.cache-fp1n1c:hover svg {
  border-radius: 4px;
  background-color: #f6f5f7;
  fill: #4f0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-fp1n1c:focus+svg {
  outline: 1px #b2b6c3 dotted;
}

.cache-iyx5sv.cache-iyx5sv {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 0;
}

.cache-8ng7tj {
  height: 24px;
  width: 24px;
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-546l7a {
  visibility: hidden;
  position: absolute;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-5yrm0v.cache-5yrm0v {
  font-size: 12px;
  color: #ef5774;
  padding-right: 4px;
  padding-left: 4px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <label
      aria-disabled="false"
      class="eu28k4m3 e1g1zfwd0 cache-2p9kfb e7ah3bn0"
    >
      <input
        aria-checked="false"
        class="cache-fp1n1c eu28k4m2"
        name="checkbox"
        type="checkbox"
      />
      <div
        class="cache-iyx5sv e7ah3bn0"
      >
        <div
          aria-hidden="true"
        >
          <svg
            class="CircularProgressbar  cache-8ng7tj e7dhm9i1"
            data-test-id="CircularProgressbar"
            viewBox="0 0 100 100"
          >
            <path
              class="CircularProgressbar-trail"
              d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
              fill-opacity="0"
              stroke-width="16"
              style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
            />
            <path
              class="CircularProgressbar-path"
              d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
              fill-opacity="0"
              stroke-width="16"
              style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
            />
          </svg>
        </div>
        <div
          class="cache-546l7a e7dhm9i0"
        >
          <label
            for="input-6c756c756c756c756c756c756c756c75"
          >
            Loading
          </label>
          <progress
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="20"
            aria-valuetext="20%"
            id="input-6c756c756c756c756c756c756c756c75"
            max="100"
            value="20"
          >
            20%
          </progress>
        </div>
      </div>
    </label>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-5yrm0v e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with sizes 1`] = `
<DocumentFragment>
  .cache-2p9kfb {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-1pd6kl4 {
  opacity: 0.01;
  width: 37px;
  height: 37px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.cache-1pd6kl4:hover svg {
  border-radius: 4px;
  background-color: #f6f5f7;
  fill: #4f0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-1pd6kl4:focus+svg {
  outline: 1px #b2b6c3 dotted;
}

.cache-1qado5b {
  fill: #dce1eb;
  height: 37px;
  width: 37px;
  min-width: 37px;
  min-height: 37px;
  box-sizing: content-box;
}

.cache-1qado5b.cache-1qado5b {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-5yrm0v.cache-5yrm0v {
  font-size: 12px;
  color: #ef5774;
  padding-right: 4px;
  padding-left: 4px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <label
      aria-disabled="false"
      class="eu28k4m3 e1g1zfwd0 cache-2p9kfb e7ah3bn0"
    >
      <input
        aria-checked="false"
        class="cache-1pd6kl4 eu28k4m2"
        name="checkbox"
        type="checkbox"
        value="test"
      />
      <svg
        class="eu28k4m1 etwatq50 cache-1qado5b e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
      <div
        class="cache-0 eu28k4m0"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-5yrm0v e7ah3bn0"
      />
    </div>
  </div>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-2p9kfb {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-1pd6kl4 {
  opacity: 0.01;
  width: 37px;
  height: 37px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.cache-1pd6kl4:hover svg {
  border-radius: 4px;
  background-color: #f6f5f7;
  fill: #4f0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-1pd6kl4:focus+svg {
  outline: 1px #b2b6c3 dotted;
}

.cache-1wr6k2n.cache-1wr6k2n {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
}

.cache-78jmh4 {
  height: 37px;
  width: 37px;
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-546l7a {
  visibility: hidden;
  position: absolute;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-1ghrkqx {
  font-size: '12px';
  color: #ef5774;
  padding-left: 4px;
  padding-right: 4px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <label
      aria-disabled="false"
      class="eu28k4m3 e1g1zfwd0 cache-2p9kfb e7ah3bn0"
    >
      <input
        aria-checked="false"
        class="cache-1pd6kl4 eu28k4m2"
        name="checkbox"
        type="checkbox"
        value="test"
      />
      <div
        class="cache-1wr6k2n e7ah3bn0"
      >
        <div
          aria-hidden="true"
        >
          <svg
            class="CircularProgressbar  cache-78jmh4 e7dhm9i1"
            data-test-id="CircularProgressbar"
            viewBox="0 0 100 100"
          >
            <path
              class="CircularProgressbar-trail"
              d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
              fill-opacity="0"
              stroke-width="16"
              style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
            />
            <path
              class="CircularProgressbar-path"
              d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
              fill-opacity="0"
              stroke-width="16"
              style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 211.11502632123413px;"
            />
          </svg>
        </div>
        <div
          class="cache-546l7a e7dhm9i0"
        >
          <label
            for="input-6c756c756c756c756c756c756c756c75"
          >
            Loading
          </label>
          <progress
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="20"
            aria-valuetext="20%"
            id="input-6c756c756c756c756c756c756c756c75"
            max="100"
            value="20"
          >
            20%
          </progress>
        </div>
      </div>
      <div
        class="cache-0 eu28k4m0"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-1ghrkqx eu28k4m0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with valid 1`] = `
<DocumentFragment>
  .cache-2p9kfb {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-13dvzl1 {
  opacity: 0.01;
  width: 24px;
  height: 24px;
  position: absolute;
  cursor: pointer;
  margin-right: 10px;
  padding: 2px;
  pointer-events: auto;
}

.cache-13dvzl1:hover svg {
  border-radius: 4px;
  background-color: #f6f5f7;
  fill: #4f0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.cache-13dvzl1:focus+svg {
  outline: 1px #b2b6c3 dotted;
}

.cache-kwrfe1 {
  fill: #45d6b5;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.cache-kwrfe1.cache-kwrfe1 {
  vertical-align: middle;
  margin-right: 10px;
  padding: 2px;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-5yrm0v.cache-5yrm0v {
  font-size: 12px;
  color: #ef5774;
  padding-right: 4px;
  padding-left: 4px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <label
      aria-disabled="false"
      class="eu28k4m5 e1g1zfwd0 cache-2p9kfb e7ah3bn0"
    >
      <input
        aria-checked="false"
        class="cache-13dvzl1 eu28k4m4"
        name="checkbox"
        type="checkbox"
      />
      <svg
        class="eu28k4m3 etwatq50 cache-kwrfe1 e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
      <div
        class="cache-0 eu28k4m2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-5yrm0v e7ah3bn0"
      />
    </div>
  </div>
</DocumentFragment>
`;
